<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_maps"
        android:title="@string/maps"
        android:icon="@drawable/ic_baseline_location_pin_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_language"
        android:title="@string/language"
        android:icon="@drawable/ic_baseline_language_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        app:showAsAction="ifRoom">
    </item>
</menu>